--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,10 @@
-body {
+body{
+    margin-left:2%;
+    margin-right:2%;
+    margin-bottom:2%;
+    margin-top:2%;
+    width:96%;
+    height:96%;
     background-image: url("../images/star-wars-background.jpg");
     background-repeat: no-repeat;
 }
@@ -7,21 +13,46 @@ body {
     text-align: right;
     margin-right: 50px;
     margin-bottom: 50px;
-}
-
-/* fix float left from char-box */
-#your-char-area, #enemies-to-attack, #defender-area, .game-btn, .game-text {
-    clear: both;
+    font-size: 50px;
+    color: white;
+    /* outline on letters */
+    text-shadow:
+		-1px -1px 0 #000,
+		1px -1px 0 #000,
+		-1px 1px 0 #000,
+		1px 1px 0 #000;
 }
 
 .game-text {
     clear: both;
+    padding-top: 20px;
     margin: 20px;
+    color: white;
+    font-size: 30px;
+    /* outline on letters */
+    text-shadow:
+		-1px -1px 0 #000,
+		1px -1px 0 #000,
+		-1px 1px 0 #000,
+		1px 1px 0 #000;
 }
 
 .game-btn {
+    background-color: #4CAF50; /* Green */
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+}
+
+.clear-hack {
     clear: both;
-    margin: 20px;
 }
 
 /* character box */
@@ -35,8 +66,9 @@ body {
 }
 
 .char-img {
-    height: 80px;
+    height: 90px;
     width: 110px;
+    object-fit: cover;
     background-color: black;
 }
 
